# plasma-widget-yeelight

./: CMakeLists.txt  README.md  metadata.json
contents/config/: main.xml
contents/ui/: main.qml
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: configSettings.qml  main.qml
plugin/: bulb.cpp  bulb.h  bulbdiscovery.cpp  bulbdiscovery.h  qmldir  yeelightplugin.cpp  yeelightplugin.h
